--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,6 +21,19 @@ body{
     height: 2px;
     margin:10px;
 }
+.SocialMedia{
+    display: none;
+}
+.aboutLink{
+    display: none;
+}
+
+.blueBar{
+    background-color:#4c95fc;
+    width: 100vw;
+    height: 65vh;
+}
+
 .firstH2{
     margin-top: -10px;
     font-family: 'Poppins';
@@ -56,11 +69,7 @@ body{
     position: relative;
     right: -7px;
 }
-.blueBar{
-    background-color:#4c95fc;
-    width: 100vw;
-    height: 65vh;
-}
+
 .firstH2{
     position: relative;
     top:40px;
@@ -115,8 +124,6 @@ body{
     font-size: 33,6px;
     text-align: center;
 }
-
-
 #customerH3{
     color: #4c95fc;
     font-family: 'Poppins';
@@ -317,6 +324,9 @@ h6{
         height: 2px;
         margin:10px;
     }
+    .SocialMedia{
+        display:none;
+    }
     .blueBar{
         position: relative;
         right: 25px;
@@ -353,19 +363,55 @@ h6{
     }
     .firstH2{
         position: relative;
-        top: 15px;
+        top: 3vh;
+        left: 2vw;
         font-family: 'Poppins';
         font-size: 35px;
-        margin-left: 30px;
+       
         display: inline;
     }
     .firstPara{
         position: relative;
-        top:30px;
+        top:4vh;
+        left:1vw;
         font-family: 'Poppins';
         font-size: 19px;
-        margin-right: 2px;
-       
+    }
+    .SecondH2{
+        position: relative;
+        top:3vh;
+        left: -1vw;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 40px;
+        text-align: center;
+    }
+    .SecondPara{
+        position: relative;
+        top:3vh;
+        left: -1vw;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 19px;
+        text-align: center;
+    }
+    .ThirdH2{
+        position: relative;
+        top:3vh;
+        left: -1vw;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 40px;
+        text-align: center;
+    }
+    .ThirdPara{
+        position: relative;
+        top: 3vh;
+        left: -1vw;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 19px;
+        text-align: center;
     }
     #customerH3{
         position: relative;
@@ -496,7 +542,6 @@ h6{
         width: 30vw;
         height: 6vh;
     }
-
     #KanduaFoundersText{
         position: relative;
         left: 147px;
@@ -523,7 +568,9 @@ h6{
         text-decoration: underline;
     }
     .blueStroke{
-        width: 100vw;
+        position: relative;
+        left: 19vw;
+        width: 60vw;
         height: 2vh;
     }
     #KanduaPara{
@@ -573,13 +620,395 @@ h6{
         font-family: 'Poppins';
         text-decoration: underline;
     }
-
   } 
   
 /* Desktop view -----------------------------------------------------------------------------------------------------------*/
   /* Large devices (laptops/desktops, 992px and up) */
   @media only screen and (min-width: 992px) {
+
     .kanduaLogo{position: relative;
+        top: 32px;
+        width: 3vw;
+        height:6vh;
+        margin-left: -230px;
+    }
+    .aboutLink{
+        position: relative;
+        top: 4.5vh;
+        left: 1.5vw;
+        color:#000000;
+        text-decoration: underline;
+        font-family: 'Poppins';
+        font-size: 19px;
+        font-weight: 250;
+    }
+    .menuBar{
+        position: relative;
+        top: 32px;
+        left: 765px;
+        background-color: black;
+        width: 35px;
+        height: 2px;
+        margin:10px;
+         display: none;
+    }
+    .SocialMedia{
+        position: relative;
+        top: 5vh;
+        left: 42vw;
+        display: block;
+    } 
+    .instagram{
+        width: 3vw;
+        height: 3vh;
+    }
+    .facebook{
+        width: 3vw;
+        height: 3vh;
+    }
+    .linked{
+        width: 3vw;
+        height: 3vh;
+    }
+    .firstH2{
+        position: relative;
+        top: 45px;
+        left: 150px;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 40px;
+        margin-left: 30px;
+    }
+    .firstPara{
+        position: relative;
+        left: -10px;
+        top:52px;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 19px;
+        margin-left: 10px;
+    }
+    .SecondH2{
+        position: relative;
+        top:45px;
+        left: 10px;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 40px;
+        text-align: center;
+    }
+    .SecondPara{
+        position: relative;
+        top:50px;
+        left: 10px;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 19px;
+        text-align: center;
+    }
+    .ThirdH2{
+        position: relative;
+        top:45px;
+        left: 10px;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 40px;
+        text-align: center;
+    }
+    .ThirdPara{
+        position: relative;
+        top: 50px;
+        left: 10px;
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-size: 19px;
+        text-align: center;
+    }
+    #KanduaText{
+        position: relative;
+        left: -89px;
+        margin-top: 135px;;
+        width: 1200px;
+        color:#4c95fc;
+        font-family: 'Poppins';
+        font-size: 48px;
+        line-height: 54px; 
+    }
+    #kandua{
+        text-decoration: underline;
+    }
+    .aboutText{
+        position: relative;
+        left: -89px;
+        width: 2000px;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size: 22.4px;
+        font-weight: 400;
+        margin: 20px 0px 0px;
+        line-height: 30px;
+        word-spacing: 10px; 
+    }
+    .MainPara{
+        position: relative;
+        left: -5px;
+        top: 10px;
+        width: 1200px;
+    }
+    .blueBar{
+        position: relative;
+        right: 274px;
+        top: 10px;
+        background-color:#4c95fc;
+        width: 100vw;
+        height: 23vh;
+    }
+    #customerH3{
+        position: relative;
+        left:-90px;
+        color: #4c95fc;
+        font-family: 'Poppins';
+        font-size: 32px;
+        font-weight: 600;
+    }
+    .card.myCard{
+        position: relative;
+        right: 20vw;
+        top: 10vh;
+        border:0;
+    }
+    .SayoCard{
+        position: relative;
+        bottom: 60vh;
+        left: 36vw;
+        border:0;
+    }
+    #Arjun{
+        position: relative;
+        top:5vh;
+        left: 2vw;
+        color:#4c95fc;
+        font-family: 'Poppins';
+        font-size: 32px;
+        
+    }
+     #Sayo{ 
+        position: relative;
+        top:5vh; 
+        color:#4c95fc;
+        font-family: 'Poppins';
+        font-size: 32px;
+        left: 47px;
+     }
+    .CustomersSayImage{
+        position: relative;
+        left:-100px; 
+        margin-bottom: 20px;
+        width: 125px;
+        height: 122px;
+    }
+    .customersTestimonialPara{
+        position: relative;
+        left: -320px;
+        width: 950px;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size: 16px;
+        padding: -20px;
+        line-height: 20px;
+        margin: 20px 0px 10px;
+        right: 5px;
+        line-height: 27px;
+    }
+    .Names{
+        position: relative;
+        left:10px;
+        font-weight: 350;
+        text-align: right;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size: 16px;
+    }
+    p{
+        font-weight: 355;  
+    }
+    /* this is the "Get a quote" button  */
+    .quoteButton{
+        position: relative;
+        background-color:#4c95fc;
+        left: 750px;
+        border: 0;
+        width: 10.5vw;
+        height: 8vh;
+    }
+    .buttonHeading{
+        position: relative;
+        transform: translateY(0.5vh);
+        color: #ffffff;
+        font-family: 'Poppins';
+        font-weight: 450;
+        font-size: 16px;
+    }
+    h6{
+        font-family: 'Poppins';
+        font-size: 19.2px;
+    }
+    .ProsSayImage{
+        position: relative;
+        left:-100px; 
+        margin-bottom: 20px;
+        width: 125px;
+        height: 122px;
+        margin-top: 20px;
+    }
+    .card-img{
+        border-radius: 0;
+    }
+    .ProsTestimonialPara{
+        position: relative;
+        left: -320px;
+        width: 100%;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size:16px;
+        padding: -20px;
+        margin: 20px 0px 10px;
+        line-height: 27px;
+    }
+    #Pronames{
+        position: relative;
+        left: -5px;
+        font-family: 'Poppins';
+        font-size:16px;
+        text-decoration: underline;
+    }
+    .ProsButton{
+        position: relative;
+        left: 100px;
+        background-color:#4c95fc;
+        left: 750px;
+        border: 0;
+        width: 10.5vw;
+        height: 8vh;
+    }
+    .PartnersLogo{
+        position: relative;
+        left: -100px;
+        width: 119px;
+        height: 60px;
+    }
+    .PartnersTestimonialPara{
+        position: relative;
+        left: 950px;
+        left: -320px;
+        width: 100%;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size:16px;
+        padding: -20px;
+        margin: 20px 0px 10px;
+        line-height: 27px;
+    }
+    .PartnerButton{
+        position: relative;
+        background-color:#4c95fc;
+        left: 435px;
+        border: 0;
+        width: 15vw;
+        height: 8vh;
+    }
+    .TeamsTestimonialPara{
+        position: relative;
+        left: -320px;
+        width: 950px;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size: 16px;
+        padding: -20px;
+        line-height: 20px;
+        margin: 20px 0px 10px;
+        right: 5px;
+        line-height: 27px;
+    }
+    .OpeningsButton{
+        position: relative;
+        background-color:#4c95fc;
+        left: 435px;
+        border: 0;
+        width: 14vw;
+        height: 8vh;
+    }
+    #KanduaFoundersText{
+        position: relative;
+        top: 5vh;
+        left: 380px;
+        font-weight: 300;
+        color:#4c95fc;
+        font-family: 'Poppins';
+        font-size: 32px;
+    }
+    .founder{
+        position: relative;
+        top: 40px;
+        margin-left: 100px;
+        width: 13vw;
+    }
+    
+    #linkedinRef{
+        color:#4c95fc;
+        font-family: 'Poppins';
+        font-size: 19.2px;
+        text-decoration: underline;
+    }
+    .backText{
+        color: #4c95fc;
+        font:19.2px;
+        font-family: 'Poppins';
+        text-decoration: underline;
+    }
+    .Founders{
+        position: relative;
+        top:5vh;
+        left: -6vw;
+        width: 600px;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size: 19.2px;
+        word-spacing: -3px;
+    }
+    .GetinTouchButton{
+        position: relative;
+        bottom: 45vh;
+        background-color:#4c95fc;
+        left: 458px;
+        border: 0;
+        width: 10.5vw;
+        height: 8vh;
+    
+    }
+    .blueStroke{
+        position: relative;
+        bottom: 43vh;
+        left: -1vw;
+        width: 70vw;
+        height: 2vh;
+    }
+    #KanduaPara{
+        position: relative;
+        bottom: 20vh;
+        left: 230px;
+        color: #000000;
+        font-family: 'Poppins';
+        font-size: 19.2px;
+    }
+    
+    
+  } 
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1920px) {
+    .kanduaLogo{
+        position: relative;
         top: 32px;
         width: 3vw;
         height:6vh;
@@ -594,17 +1023,45 @@ h6{
         height: 2px;
         margin:10px;
     }
+    .SocialMedia{
+        position: relative;
+        top: 5vh;
+        left: 30vw;
+    }
+    .instagram{
+        width: 3vw;
+        height: 3vh;
+    }
+    .facebook{
+        width: 3vw;
+        height: 3vh;
+    }
+    .linked{
+        width: 3vw;
+        height: 3vh;
+    }
+    .blueBar{
+        position: relative;
+        left: -389px;
+        background-color:#4c95fc;
+        width: 100vw;
+        height: 65vh;
+    }
     .firstH2{
-        margin-top: -10px;
+        position: relative;
+        top: 100px;
+        left: 200px;
         font-family: 'Poppins';
         font-size: 35px;
-        margin-left: 30px;
+        /* margin-left: 30px; */
     }
     .firstPara{
-        margin-top: 5px;
+        position: relative;
+        top: 10px;
+        margin-left: -110px;
         font-family: 'Poppins';
         font-size: 19px;
-        margin-left: 10px;
+        /* margin-left: 10px; */
     }
     .SecondH2{
         position: relative;
@@ -628,7 +1085,7 @@ h6{
     .ThirdH2{
         position: relative;
         top:-10px;
-        left: 10px;
+        margin-left: -10px;
         color: #ffffff;
         font-family: 'Poppins';
         font-size: 33,6px;
@@ -637,16 +1094,13 @@ h6{
     .ThirdPara{
         position: relative;
         top:-10px;
-        left: 10px;
+        margin-left: -10px;
         color: #ffffff;
         font-family: 'Poppins';
         font-size: 33,6px;
         text-align: center;
     }
-
-
-
-    #KanduaText{
+    #KanduaText{    
         position: relative;
         left: -89px;
         margin-top: 135px;;
@@ -703,9 +1157,11 @@ h6{
         text-align: center;
     }
     #customerH3{
+        position: relative;
+        top: 50px;
         color: #4c95fc;
         font-family: 'Poppins';
-        font-size: 28.8px;
+        font-size: 32px;
         font-weight: 600;
     }
     .card{
@@ -715,14 +1171,15 @@ h6{
         margin-top: 20px;
     }
     .customersTestimonialPara{
+        position: relative;
+        right: 5px;
         color: #000000;
         font-family: 'Poppins';
         font-size: 19.2px;
         padding: -20px;
         line-height: 20px;
         margin: 20px 0px 10px;
-        position: relative;
-        right: 5px;
+       
         line-height: 27px;
     }
     .Names{
@@ -845,9 +1302,13 @@ h6{
         text-decoration: underline;
     }
     .blueStroke{
-        width: 100vw;
-        height: 2vh;
-    }
+            position: relative;
+            right: 200vw;
+            bottom: 43vh;
+            width: 70vw;
+            height: 2vh;
+        }
+    
     #KanduaPara{
         position: relative;
         margin-left: 50px;
@@ -878,11 +1339,5 @@ h6{
         height: 10vh;
     }
 
-
-
-  } 
-  
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
-  @media only screen and (min-width: 1200px) {
     
   }
